opam-version: "2.0"
name: "track_utils"
version: "0.2"
synopsis: "Manage and Parse Tracks"
maintainer: "Baran Dalgic <baran.dalgic@rwth-aachen.de>"
authors: "Baran Dalgic <baran.dalgic@rwth-aachen.de>"
homepage: "https://github.com/dalbar/track_utils"
bug-reports: "https://github.com/dalbar/track_utils"
depends: [ "dune" "alcotest" "containers" "re" "odoc" "cmdliner"]
